--- a/src/app/shared/components/setting-up-modal/setting-up-modal.component.html
+++ b/src/app/shared/components/setting-up-modal/setting-up-modal.component.html
@@ -1,11 +1,13 @@
 <ion-header>
     <ion-toolbar color="dark">
+        <div slot="start">
+            <img class="logo" src="assets/images/eVigilsVideo Logo blue 100*311.png" />
+          </div>
         <ion-buttons slot="primary">
             <ion-button color="light" (click)="dismiss()">
                 <ion-icon slot="icon-only" name="close"></ion-icon>
             </ion-button>
         </ion-buttons>
-        <ion-title>SETTING UP </ion-title>
     </ion-toolbar>
 </ion-header>
 
