--- a/src/app/shared/components/setting-up-modal/setting-up-modal.component.scss
+++ b/src/app/shared/components/setting-up-modal/setting-up-modal.component.scss
@@ -2,6 +2,11 @@
     --background: transparent !important;
 }
 
+.logo{
+    margin: 10px;
+    height: 50px;
+}
+
 .footer-md::before {
     background-image: none;
 }
