--- a/src/app/video-room/video-room.page.html
+++ b/src/app/video-room/video-room.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar color="dark">
     <div slot="start">
-      <img class="demo-logo" src="assets/images/openvidu_vert_white_bg_trans_cropped.png" />
+      <img class="demo-logo" src="assets/images/eVigilsVideo Logo blue 100*311.png" />
     </div>
-    <ion-title>Session: {{mySessionId}}</ion-title>
+    <ion-title>Conference Room Id: {{mySessionId}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
