updates for logo and attribution

--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -17,7 +17,9 @@
           </ion-button>
 
     </div>
-    
+    <div class="attribution">
+      Dr. Dayton Misfeldt
+    </div>
 
   </div>
 </ion-content>
