--- a/src/app/shared/components/setting-up-modal/setting-up-modal.component.html
+++ b/src/app/shared/components/setting-up-modal/setting-up-modal.component.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar color="dark">
         <div slot="start">
-            <img class="logo" src="assets/images/eVigilsVideo Logo blue 100*311.png" />
+            <img class="logo" src="assets/images/eVigilsVideo Logo white+black 566*185.png" />
           </div>
         <ion-buttons slot="primary">
             <ion-button color="light" (click)="dismiss()">
