--- a/src/app/dashboard/dashboard.page.scss
+++ b/src/app/dashboard/dashboard.page.scss
@@ -14,6 +14,12 @@
 
 }
 
+.attribution{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
 
 #dashboard-content {
     --background: none;
